# rust_extensions

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pipeline.yml
.zed/: tasks.json
deep_flat/: Cargo.toml  README.md
deep_flat/src/: lib.rs
deep_flatten/: Cargo.toml
deep_flatten_derive/: Cargo.toml
deep_flatten_derive/src/: lib.rs
derive/: Cargo.toml
derive/src/: lib.rs
group_by/: Cargo.toml
group_by/src/: lib.rs
src/: lib.rs
