[package]
name = "deep_flat"
version = "0.1.2"
authors = ["Jayden <jaydenobrien.work@gmail.com.au>"]
description = "Simple macro for deep flattening objects"
keywords = ["flatten", "deep"]
license = "MIT"
edition = "2024"
readme = "README.md"

exclude = [
    "derive/target/*",
    "target/*",
    "idea/*",
    ".gitignore",
    "pipeline.yml",
]

[dependencies]
deep_flatten_derive = { path = "../deep_flatten_derive", version = "0.1.0" }
