[package]
name = "deep_flatten_derive"
version = "0.1.0"
authors = ["Jayden <jaydenobrien.work@gmail.com.au>"]
description = "Derive macro for deep_flatten"
keywords = ["flatten", "deep"]
license = "MIT"
edition = "2021"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.45"
syn = "2.0"
